---
source: crabbing-interpreters/tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/assignment/to_this.lox
---
success: false
exit_code: 65
----- stdout -----

----- stderr -----
Error: Expect expression.
   ╭─[craftinginterpreters/test/assignment/to_this.lox:3:5]
   │
 3 │     this = "value"; // Error at '=': Invalid assignment target.
   │     ────  
   │            
───╯
